--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.1",
+    "@angular/cdk": "^20.2.4",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.4",
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.2",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
