--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "ng2-charts": "^8.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
